CHANGELOG

When		Who		What
======================================================================================
2022-03-29	Richard Forth   Adding support for AmazonLinux
				- Tests Failing Currently
				- Work in progress
2022-03-28	Richard Forth   Added support for Alma Linux 8 
				- Tests Passing
2022-03-28	Richard Forth   Added support for Rocky Linux 8
				- Tests Passing
2022-03-28	Richard Forth   Removed support for EOL Operating Systems
2021-11-03	Emil Cazamir	Added SuSE Linux v.12 compatibility 
				Using httpd/apache2 running in prefork mode, tested 
				with SLES 12 SP5
2021-10-28	w4zu            Add support for Debian 11
2021-02-22	Richard Forth   Added an important message about
				Domain expiry and non renewal, and the risks
				and mitigations that were previously put in
				place. 
				- Closes Issue #367
				- Removed support for RHEL / CentOS 6, as it
				went EOL November 30th 2020.
				- Closes issue #364
				- Updated messaging with regards to worker/mpm
				report inconsistency.
				- Closes issue #363
				Added php to Dockerfiles
				- Closes #356
2020-10-03	Richard Forth   Added an important message about
				troubleshooting apache vs running this script.
2020-09-30	Richard Forth   Clarification onf "10% of MAX" wording to:
                                "90-100% of remaining RAM".
2020-09-09	Richard Forth   Address issue #355
                                Made a change to how debian/ubuntu php.ini is
				located to make it more future proof.
2020-07-21	Richard Forth   Address issue #351
                                - Fixed applied to patch a break introduced in #347.
				Caused the entire config to be empty.
				In turn caused lots of CONFIG NOT FOUND, even
				when the configuration elements existed on the
				system.
2020-07-21	Richard Forth   Address issue #350
                                - Change wording about worker model.
2020-07-17	Richard Forth   Address issue #348
				- Apache user not found in ubuntu installs.